[package]
name = "bd18378"
version = "0.0.0"
edition = "2021"
authors = ["Florian Penn"]
license = "GPL-2.0-only"
description = "Driver for ROHM BD18378 12CH LED Driver IC"

[dependencies]
embedded-hal = "1.0.0"
strum = { version = "0.27.1", default-features = false, features = ["derive"] }

[dev-dependencies]
embedded-hal-mock = "0.11.1"
